# Learn-Bridge

./: .gitignore  NCERT PDF Routing Architecture.md  README.md  runall.sh
Backend/: main.py  package.json  pyproject.toml  run-server.sh
Backend/Chatbot_LLM/: guard.py  main.py  ollama.py  rag_api.py  spellcheck.py
Backend/Scrapper/: .gitignore  README.md  main.py  pyproject.toml
Backend/Scrapper/RAG/: engine.py  router.py
Backend/Scrapper/Scripts/: imagefallback.py  images.py  links.py  videos.py  videosfallback.py
Frontend/: package-lock.json  package.json  vite.config.ts
Frontend/src/: routeTree.gen.ts  styles.css
Frontend/src/components/: AppSidebar.tsx  Blobs.tsx  ChatbotPanel.tsx  ClayButton.tsx  ClayInput.tsx  ConceptMapCanvas.tsx  ThemeToggle.tsx
Frontend/src/lib/: api.ts  subject-meta.ts
Frontend/src/routes/: __root.tsx  app.chapter.$chapterId.tsx  app.concept-map.tsx  app.index.tsx  app.leaderboard.tsx  app.notebook.index.tsx  app.notebook.tsx  app.planner.tsx  app.progress.tsx  app.quizzes.$quizId.results.tsx  app.quizzes.$quizId.tsx  app.quizzes.index.tsx  app.quizzes.new.tsx  app.quizzes.tsx  app.settings.tsx  app.student-progress.tsx  app.subject.$subjectId.tsx  app.subjects.tsx  app.tsx  assessment.tsx  index.tsx  login.tsx  signup.tsx
Reference/: package.json
Reference/src/: styles.css
Reference/src/components/: AppSidebar.tsx  ChatbotPanel.tsx  ClayButton.tsx  ConceptGraphFlow.tsx  MascotBadge.tsx  ThemeToggle.tsx
Reference/src/hooks/: useMe.ts
reference/frontend/: eslint.config.js  index.html  package.json
(+53 files in other folders)
