[project]
name = "backend"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "ddgs>=9.13.0",
    "fastapi[standard]>=0.115.0",
    "flask-cors>=6.0.2",
    "flask[standard]>=3.1.3",
    "PyJWT>=2.8.0",
    "pymongo>=4.17.0",
    "requests>=2.33.1",
    "uvicorn>=0.30.0",
    "yt-dlp>=2026.3.17",
]

